--- a/delivery-food/src/styles/landingPage.css
+++ b/delivery-food/src/styles/landingPage.css
@@ -6,3 +6,21 @@ header {
 main div .categories {
   border: 1px solid;
 }
+
+main div .categories img {
+  position: relative;
+}
+
+main div .categories img:after {
+  content: "";
+  position: absolute;
+  width: 1px;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: #000;
+}
+
+main div .categories:nth-child(even) {
+  align-self: flex-end;
+}
