se quitó el borde redondeado al header de la landing page

--- a/delivery-food/src/styles/landingPage.css
+++ b/delivery-food/src/styles/landingPage.css
@@ -3,6 +3,10 @@ header {
   border-bottom-left-radius: 50px;
 }
 
+header.header-landing-page {
+  border-radius: 0px;
+}
+
 main {
   padding: 0 50px;
   overflow-x: hidden;
