--- a/delivery-food-frontend/delivery-food/src/styles/perfilUsuario.css
+++ b/delivery-food-frontend/delivery-food/src/styles/perfilUsuario.css
@@ -33,10 +33,13 @@
 
 input[type="file"].btn-upload-img-user-profile {
   margin-top: 10px;
+  background: #ffb703;
   padding: 15px;
-  z-index: 1;
+  width: 15%;
+  border-radius: 50%;
   opacity: 0;
   cursor: pointer;
+  z-index: 11;
 }
 
 .btn-upload-img-user-profile-icon {
@@ -46,7 +49,7 @@ input[type="file"].btn-upload-img-user-profile {
   box-shadow: 0px 2px 1px -1px rgba(30, 30, 60, 0.5),
     0px 10px 17px -1px rgba(30, 30, 60, 0.4);
   transition: transform 0.3s ease-in-out;
-  z-index: -4;
+  z-index: 10;
 }
 
 input[type="file"].btn-upload-img-user-profile:hover
