se creo pagina menu faltan mas detalles

--- a/delivery-food-frontend/delivery-food/src/styles/menu.css
+++ b/delivery-food-frontend/delivery-food/src/styles/menu.css
@@ -1,3 +1,32 @@
+.drawer-menu {
+  background: var(--dark-blue);
+  color: aliceblue;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  border: none;
+}
+
 .carrousel {
   height: 82.5vh;
+}
+
+.menu-list .menu-list__item {
+  position: relative;
+  overflow: hidden;
+}
+.menu-list .menu-list__item img {
+  width: 400px;
+  max-height: 200px;
+  backdrop-filter: blur(20px);
+  filter: grayscale(50%);
+  transition: all ease-in-out 0.4s;
+  cursor: pointer;
+}
+.menu-list .menu-list__item img:hover {
+  filter: grayscale(0%);
+  transform: scale(1.1);
 }
