--- a/delivery-food-frontend/delivery-food/src/index.css
+++ b/delivery-food-frontend/delivery-food/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,200;0,300;0,400;0,700;1,500&family=Kdam+Thmor+Pro&family=M+PLUS+1:wght@100;200;300;400;500;600;700;800;900&family=Nunito:wght@200;300;400;500;600;700;800&family=Open+Sans:wght@300;400;500&family=Roboto+Condensed:wght@300;400;700&family=Roboto:wght@100;300;400&display=swap");
+
 :root {
   /* --primary: #242f9b;
   --soft-blue: #646fd4;
