--- a/delivery-food-frontend/delivery-food/src/styles/menu.css
+++ b/delivery-food-frontend/delivery-food/src/styles/menu.css
@@ -22,11 +22,23 @@
   width: 400px;
   max-height: 200px;
   backdrop-filter: blur(20px);
-  filter: grayscale(50%);
+  filter: grayscale(60%);
   transition: all ease-in-out 0.4s;
   cursor: pointer;
 }
 .menu-list .menu-list__item img:hover {
   filter: grayscale(0%);
   transform: scale(1.1);
+}
+
+@media (max-width: 1000px) {
+  .menu-list-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 699px) {
+  .menu-list-grid {
+    grid-template-columns: 1fr;
+  }
 }
