carrito de compras casi terminado

--- a/delivery-food-frontend/delivery-food/src/styles/detailProduct.css
+++ b/delivery-food-frontend/delivery-food/src/styles/detailProduct.css
@@ -15,6 +15,7 @@
   margin: 10px 30px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
 }
 
 .detail-product__items .items-item {
