--- a/delivery-food-frontend/delivery-food/src/styles/menuEstablecimiento.css
+++ b/delivery-food-frontend/delivery-food/src/styles/menuEstablecimiento.css
@@ -9,6 +9,40 @@
   gap: 30px;
 }
 
+.item-establecimiento {
+  position: relative;
+  overflow: hidden;
+  height: 300px;
+}
+
+.item-establecimiento img {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  filter: blur(2px) brightness(45%);
+  transition: filter ease-in-out 0.4s;
+  cursor: pointer;
+}
+.item-establecimiento img:hover {
+  filter: blur(0) brightness(85%);
+}
+
+.item-establecimiento > div {
+  width: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  position: absolute;
+  bottom: 0;
+}
+
+.item-establecimiento > div h2 {
+  text-align: center;
+  left: 0;
+  font-size: 24px;
+  color: #fff;
+  width: 100%;
+}
+
 .item-establecimiento-single {
   position: relative;
   overflow: hidden;
@@ -28,7 +62,7 @@
 
 .item-establecimiento-single img {
   width: 100%;
-  max-height: 200px;
+  max-height: 150px;
   object-fit: cover;
 }
 
