se agregó funcionalidad de eliminar item del carrito

--- a/delivery-food-frontend/delivery-food/src/styles/pedido.css
+++ b/delivery-food-frontend/delivery-food/src/styles/pedido.css
@@ -23,5 +23,9 @@
 }
 
 .products-cart-added .product > div {
+  height: 250px;
   padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
