--- a/delivery-food-frontend/delivery-food/src/styles/headerMenu.css
+++ b/delivery-food-frontend/delivery-food/src/styles/headerMenu.css
@@ -1,5 +1,5 @@
 header.menu {
-  background: linear-gradient(to left, var(--soft-blue) 30%, var(--dark-blue));
+  background: var(--dark-blue);
 }
 
 .search-food {
